# OS-Labs

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
labs/lab1/var22/: .gitignore  CMakeLists.txt  child.cpp  main.cpp
labs/lab1/var22/inc/: .gitignore  CMakeLists.txt  main.cpp
labs/lab1/var22/inc/include/: child.h  exceptions.h  os.h  parent.h
labs/lab1/var22/inc/src/: child.cpp  os.cpp  parent.cpp
labs/lab1/var22/include/: child.h  parent.h
labs/lab1/var22/src/: benchmark.tex  child.cpp  literature.tex  parent.cpp  problem.tex  src.tex  thinks.tex  titlepage.tex
labs/lab1/var22/styles/: log-style.sty
labs/lab2/var19/inc/: CMakeLists.txt  main.cpp
labs/lab2/var19/inc/include/: exceptions.h  thread.h
labs/lab2/var19/inc/src/: thread.cpp
labs/lab2/var19/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
labs/lab3/var22/inc/: main.cpp
labs/lab3/var22/inc/include/: child.h  exceptions.h  os.h  parent.h
labs/lab3/var22/inc/src/: child.cpp  os.cpp  parent.cpp
labs/lab3/var22/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
